--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "poc",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "jest": "^28.1.0"
   },
   "dependencies": {
