--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.5.1",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "jest-html-reporter": "^3.6.0"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "jest-stare": "^0.1.22-0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov"
+    ],
+    "coverageDirectory": "./output/code-coverage",
+    "reporters": ["./node_modules/jest-html-reporter"]
   }
 }
